@@ -1,5 +1,6 @@
 package myavocat.legit.service;
 
+import myavocat.legit.dto.FactureDTO;
 import myavocat.legit.model.Client;
 import myavocat.legit.model.Dossier;
 import myavocat.legit.model.Facture;
@@ -9,61 +10,50 @@ import myavocat.legit.repository.DossierRepository;
 import myavocat.legit.repository.FactureRepository;
 import myavocat.legit.repository.UserRepository;
 import myavocat.legit.model.User;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.*;
-
-import static java.util.Arrays.stream;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class FactureService {
 
-    @Autowired
-    private UserRepository userRepository;
-
     private final FactureRepository factureRepository;
-
     private final ClientRepository clientRepository;
-
     private final DossierRepository dossierRepository;
+    private final UserRepository userRepository;
+
+    public FactureService(FactureRepository factureRepository, ClientRepository clientRepository, DossierRepository dossierRepository, UserRepository userRepository) {
+        this.factureRepository = factureRepository;
+        this.clientRepository = clientRepository;
+        this.dossierRepository = dossierRepository;
+        this.userRepository = userRepository;
+    }
 
     private String genererNumeroFacture(Client client) {
-        // Récupérer les initiales du client
         String initials = (client.getNom().substring(0, 1) + client.getPrenom().substring(0, 1)).toUpperCase();
-
-        // Récupérer la dernière facture pour ce client
         String lastFacture = factureRepository.findLastFactureByClient(initials + "%");
 
         int lastNum = 0;
         if (lastFacture != null) {
             try {
                 lastNum = Integer.parseInt(lastFacture.replaceAll("[^0-9]", ""));
-            } catch (NumberFormatException e) {
-                lastNum = 0; // Sécurité si jamais il y a une erreur dans le format de numéro
-            }
+            } catch (NumberFormatException ignored) {}
         }
 
         return initials + String.format("%03d", lastNum + 1);
     }
 
-
-    public FactureService(FactureRepository factureRepository, ClientRepository clientRepository, DossierRepository dossierRepository) {
-        this.factureRepository = factureRepository;
-        this.clientRepository = clientRepository;
-        this.dossierRepository = dossierRepository;
-    }
-
     @Transactional
-    public Facture creerFacture(UUID userId, UUID clientId, UUID dossierId, String intitule, BigDecimal montantHt, boolean tvaApplicable) {
-        // Vérifier que le client existe
+    public FactureDTO creerFacture(UUID userId, UUID clientId, UUID dossierId, String intitule, BigDecimal montantHt, boolean tvaApplicable) {
         Client client = clientRepository.findById(clientId)
                 .orElseThrow(() -> new RuntimeException("Client introuvable avec l'ID: " + clientId));
 
-        // Vérifier que le dossier existe et appartient bien au client
         Dossier dossier = dossierRepository.findById(dossierId)
                 .orElseThrow(() -> new RuntimeException("Dossier introuvable avec l'ID: " + dossierId));
 
@@ -71,22 +61,16 @@ public class FactureService {
             throw new RuntimeException("Le dossier sélectionné n'est pas associé à ce client.");
         }
 
-        // Récupérer l'utilisateur par son ID pour vérifier son office
-        // Vous devez injecter UserRepository dans ce service
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("Utilisateur introuvable avec l'ID: " + userId));
 
-        // Vérifier que l'utilisateur appartient au même office que le dossier
         if (!dossier.getOffice().getId().equals(user.getOffice().getId())) {
             throw new RuntimeException("Accès refusé : l'utilisateur ne peut pas créer une facture pour ce dossier.");
         }
-        // Générer le numéro de facture
-        String numeroFacture = genererNumeroFacture(client);
 
-        // Calculer le montant TTC
+        String numeroFacture = genererNumeroFacture(client);
         BigDecimal montantTtc = tvaApplicable ? montantHt.multiply(BigDecimal.valueOf(1.2)) : montantHt;
 
-        // Créer la facture
         Facture facture = new Facture();
         facture.setClient(client);
         facture.setDossier(dossier);
@@ -98,57 +82,78 @@ public class FactureService {
         facture.setStatutPaiement(StatutPaiement.ATTENTE_REGLEMENT);
         facture.setDateEmission(LocalDateTime.now());
 
-        return factureRepository.save(facture);
+        return convertToDTO(factureRepository.save(facture));
     }
 
-    /**
-     * Récupérer toutes les factures accessibles par l'utilisateur (dans le même office)
-     */
-    public List<Facture> getAllFactures(UUID userId) {
-        return factureRepository.findAll().stream()
-                .filter(facture -> facture.getDossier().getOffice().getId().equals(userId))
-                .toList();
+    public List<FactureDTO> getAllFactures(UUID userId) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("Utilisateur introuvable"));
+
+        UUID officeId = user.getOffice().getId();
+
+        return factureRepository.findAllByOffice(officeId)
+                .stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
     }
 
-    /**
-     * Récupérer une facture par ID
-     * Seul un utilisateur du même office peut accéder aux factures.
-     */
-    public Facture getFactureById(UUID userId, UUID id) {
+    public FactureDTO getFactureById(UUID userId, UUID id) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("Utilisateur introuvable"));
+
+        UUID officeId = user.getOffice().getId();
+
         Facture facture = factureRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Facture non trouvée avec ID: " + id));
+                .orElseThrow(() -> new RuntimeException("Facture non trouvée"));
 
-        if (!facture.getDossier().getOffice().getId().equals(userId)) {
+        if (!facture.getDossier().getOffice().getId().equals(officeId)) {
             throw new RuntimeException("Accès refusé : cette facture n'appartient pas à votre cabinet.");
         }
 
-        return facture;
+        return convertToDTO(facture);
     }
 
-    /**
-     * Mettre à jour le statut d'une facture (Réglée / En attente)
-     * Seul un utilisateur du même office peut modifier une facture.
-     */
     @Transactional
-    public Facture updateStatutFacture(UUID userId, UUID id, StatutPaiement statut) {
-        Facture facture = getFactureById(userId, id);
+    public FactureDTO updateStatutFacture(UUID userId, UUID id, StatutPaiement statut) {
+        Facture facture = factureRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Facture non trouvée"));
+
         facture.setStatutPaiement(statut);
-        return factureRepository.save(facture);
+        return convertToDTO(factureRepository.save(facture));
     }
 
-    /**
-     * Calculer les statistiques des factures (Total édité, payé, en attente)
-     * Seul un utilisateur du même office peut voir les statistiques.
-     */
+    private FactureDTO convertToDTO(Facture facture) {
+        return new FactureDTO(
+                facture.getId(),
+                facture.getNumeroFacture(),
+                facture.getIntitule(),
+                facture.getDateEmission(),
+                facture.getMontantHt(),
+                facture.getMontantTtc(),
+                facture.getStatutPaiement(),
+                facture.getModePaiement(),
+                facture.getDossier().getReference(),
+                facture.getDossier().getNomDossier(),
+                facture.getDossier().getStatut(),
+                facture.getClient().getNom(),
+                facture.getClient().getPrenom()
+        );
+    }
+
+
     public Map<String, BigDecimal> getStatistiquesFactures(UUID userId) {
-        List<Facture> factures = getAllFactures(userId);
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("Utilisateur introuvable"));
+
+        UUID officeId = user.getOffice().getId();
+
+        List<Facture> factures = factureRepository.findAllByOffice(officeId);
 
         BigDecimal totalEmis = factures.stream().map(Facture::getMontantTtc).reduce(BigDecimal.ZERO, BigDecimal::add);
         BigDecimal totalRegle = factures.stream()
                 .filter(f -> f.getStatutPaiement() == StatutPaiement.REGLEE)
                 .map(Facture::getMontantTtc)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
-
         BigDecimal totalEnAttente = totalEmis.subtract(totalRegle);
 
         return Map.of(
@@ -157,22 +162,18 @@ public class FactureService {
                 "Total en Attente", totalEnAttente
         );
     }
-
-    /**
-     * Relancer les clients pour les factures impayées
-     * Seul un utilisateur du même office peut relancer les factures.
-     */
     public void relancerFacturesImpayees(UUID userId) {
-        List<Facture> facturesEnRetard = factureRepository.findFacturesEnRetard(userId)
-                .stream()
-                .filter(f -> f.getDossier().getOffice().getId().equals(userId))
-                .toList();
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("Utilisateur introuvable"));
+
+        UUID officeId = user.getOffice().getId();
+
+        List<Facture> facturesEnRetard = factureRepository.findFacturesEnRetard(officeId);
 
         for (Facture facture : facturesEnRetard) {
             System.out.println("⚠ Relance envoyée au client " + facture.getClient().getNom() + " pour la facture " + facture.getNumeroFacture());
+            // Ici, on pourrait envoyer un email de relance au client
         }
     }
-
-
 
 }
